--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "mocha -r ts-node/register tests/**/*.ts"
   },
   "license": "MIT",
+  "repository": "https://github.com/vasyas/use-ui-bootstrap3.git",
+  "author": "vasyas <vasyl@stashuk.com>",
   "dependencies": {
     "@push-rpc/core": "^1.0.26",
     "@use-ui/hooks": "^1.0.9",
