--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "repository": "https://github.com/vasyas/use-ui-bootstrap3.git",
   "author": "vasyas <vasyl@stashuk.com>",
   "dependencies": {
-    "@push-rpc/core": "^1.0.26",
-    "@use-ui/hooks": "^1.0.9",
     "classnames": "^2.2.6",
     "react-select": "^3.0.8"
   },
+  "peerDependencies": {
+    "@push-rpc/core": "^1.0.0",
+    "@use-ui/hooks": "^1.0.0"
+  },
   "devDependencies": {
+    "@push-rpc/core": "^1.0.26",
+    "@use-ui/hooks": "^1.0.9",
     "@types/chai": "^4.2.5",
     "@types/mocha": "^5.2.7",
     "@types/react": "^16.9.13",
