--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "repository": "https://github.com/vasyas/use-ui-bootstrap3.git",
   "author": "vasyas <vasyl@stashuk.com>",
   "dependencies": {
-    "classnames": "^2.2.6",
+    "classnames": "^2.3.1",
     "react-select": "^3.0.8"
   },
   "peerDependencies": {
@@ -20,16 +20,18 @@
     "@use-ui/hooks": "^1.0.0"
   },
   "devDependencies": {
-    "@push-rpc/core": "^1.0.26",
-    "@types/chai": "^4.2.5",
-    "@types/mocha": "^5.2.7",
-    "@types/react": "^16.9.13",
-    "@use-ui/hooks": "^1.0.9",
-    "chai": "^4.2.0",
-    "mocha": "^6.2.2",
-    "prettier": "^1.19.1",
-    "ts-node": "^8.5.2",
-    "typescript": "^3.7.2"
+    "@push-rpc/core": "^1.2.9",
+    "@types/chai": "^4.2.17",
+    "@types/mocha": "^8.2.2",
+    "@types/react": "^17.0.4",
+    "@use-ui/hooks": "^1.0.18",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
+    "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
+    "typedoc": "^0.20.36",
+    "typedoc-plugin-markdown": "^3.7.2",
+    "typescript": "^4.2.4"
   },
   "publishConfig": {
     "access": "public"
