--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "vasyas <vasyl@stashuk.com>",
   "dependencies": {
     "classnames": "^2.3.1",
-    "react-select": "^3.0.8"
+    "react-select": "^3.0.8",
+    "typedoc": "^0.20.36",
+    "typedoc-plugin-markdown": "^3.7.2"
   },
   "peerDependencies": {
     "@push-rpc/core": "^1.0.0",
@@ -30,8 +32,6 @@
     "mocha": "^8.3.2",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
-    "typedoc": "^0.20.36",
-    "typedoc-plugin-markdown": "^3.7.2",
     "typescript": "^4.2.4"
   },
   "publishConfig": {
