--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mocha": "^8.3.2",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
+    "typedoc-plugin-not-exported": "^0.1.6",
     "typescript": "^4.2.4"
   },
   "publishConfig": {
