--- a/package.json
+++ b/package.json
@@ -7,16 +7,14 @@
     "prepublishOnly": "tsc",
     "build": "tsc",
     "test": "mocha -r ts-node/register tests/**/*.ts",
-    "doc": "typedoc --out api-docs --readme none ./src/index.ts"
+    "doc": "node docgen.js"
   },
   "license": "MIT",
   "repository": "https://github.com/vasyas/use-ui-bootstrap3.git",
   "author": "vasyas <vasyl@stashuk.com>",
   "dependencies": {
     "classnames": "^2.3.1",
-    "react-select": "^3.0.8",
-    "typedoc": "^0.20.36",
-    "typedoc-plugin-markdown": "^3.7.2"
+    "react-select": "^3.0.8"
   },
   "peerDependencies": {
     "@push-rpc/core": "^1.0.0",
@@ -31,8 +29,9 @@
     "chai": "^4.3.4",
     "mocha": "^8.3.2",
     "prettier": "^2.2.1",
+    "react-docgen-typescript": "^1.22.0",
+    "react-docgen-typescript-markdown-render": "^0.2.5",
     "ts-node": "^9.1.1",
-    "typedoc-plugin-not-exported": "^0.1.6",
     "typescript": "^4.2.4"
   },
   "publishConfig": {
