--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "^2.2.1",
     "react-docgen-markdown-renderer": "^2.1.3",
     "react-docgen-typescript": "^1.22.0",
+    "react-docgen-typescript-markdown-render": "^0.2.5",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
