--- a/package.json
+++ b/package.json
@@ -14,16 +14,15 @@
   "homepage": "https://github.com/vasyas/use-ui-bootstrap3",
   "author": "vasyas <vasyl@stashuk.com>",
   "dependencies": {
+    "@push-rpc/next": "^2.0.3",
     "classnames": "^2.3.1",
     "react-select": "^3.0.8"
   },
   "peerDependencies": {
-    "@push-rpc/core": "^1.0.0",
     "@use-ui/hooks": "^1.0.0",
     "react": "*"
   },
   "devDependencies": {
-    "@push-rpc/core": "^1.2.9",
     "@types/chai": "^4.2.17",
     "@types/mocha": "^8.2.2",
     "@types/react": "^17.0.4",
@@ -34,7 +33,7 @@
     "react-docgen-markdown-renderer": "^2.1.3",
     "react-docgen-typescript": "^1.22.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "typescript": "^5.3.3"
   },
   "publishConfig": {
     "access": "public"
